{{$NEXT}}

- When generating the source for named params checking, sort the parameters so
  that the order in which keys are checked is consistent.


0.02     2016-05-28

- Add support for positional parameters.

- Add support for type checking extra parameters.

- Renamed allow_extra to slurpy.


0.01     2016-05-24

- First release upon an unsuspecting world.